[gd_scene load_steps=11 format=3 uid="uid://d32tg7c6auahn"]

[ext_resource type="Texture2D" uid="uid://dipufn6cl8m2f" path="res://assets/img/Escenario_Bosque.png" id="2_d2jac"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="3_d2jac"]
[ext_resource type="PackedScene" uid="uid://jyv4g54adkmo" path="res://ui/overlays/pause_overlay.tscn" id="4_kn6v1"]
[ext_resource type="Texture2D" uid="uid://c8c3vqoltw3dg" path="res://assets/img/Libro.png" id="5_knlk5"]
[ext_resource type="Texture2D" uid="uid://cqr8ygk6dxprn" path="res://assets/img/Hongo_3.png" id="7_d2jac"]
[ext_resource type="Texture2D" uid="uid://2nqihkmg1uo6" path="res://assets/img/libro_abierto.png" id="7_g1v0n"]
[ext_resource type="Texture2D" uid="uid://dkf621tx17dmn" path="res://assets/img/animal_demo.png" id="8_d2jac"]
[ext_resource type="Script" uid="uid://c2hgpm0foa1tv" path="res://scenes/ingame_scene2.gd" id="9_kn6v1"]
[ext_resource type="Texture2D" uid="uid://dph51gxtx1l2s" path="res://assets/img/rama_demo.png" id="9_knlk5"]

[sub_resource type="Theme" id="Theme_gadrd"]

[node name="IngameScene2" type="Node2D"]
script = ExtResource("9_kn6v1")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -23.0
offset_right = 601.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_d2jac")
expand_mode = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="FadeOverlay" parent="UI" instance=ExtResource("3_d2jac")]
unique_name_in_owner = true
visible = false

[node name="PauseOverlay" parent="UI" instance=ExtResource("4_kn6v1")]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="DialogBox" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 203.0
offset_top = 262.0
offset_right = 403.0
offset_bottom = 312.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="DialogBox"]
layout_mode = 0
offset_left = 2.0
offset_right = 200.0
offset_bottom = 50.0
theme = SubResource("Theme_gadrd")
theme_override_colors/font_color = Color(0.730036, 0.0649184, 0, 1)
theme_override_font_sizes/font_size = 5
autowrap_mode = 2

[node name="Mushroom1" type="TextureButton" parent="."]
offset_left = 490.0
offset_top = 213.0
offset_right = 1210.0
offset_bottom = 933.0
scale = Vector2(0.03, 0.03)
texture_normal = ExtResource("7_d2jac")

[node name="Book" type="TextureButton" parent="."]
visible = false
offset_left = 267.0
offset_top = 183.0
offset_right = 987.0
offset_bottom = 903.0
scale = Vector2(0.04, 0.04)
texture_normal = ExtResource("5_knlk5")

[node name="BookOpen" type="TextureButton" parent="."]
visible = false
offset_left = 120.0
offset_top = 47.0
offset_right = 2040.0
offset_bottom = 1127.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_g1v0n")

[node name="Animal1" type="TextureButton" parent="."]
visible = false
offset_left = 212.0
offset_top = 64.0
offset_right = 1012.0
offset_bottom = 664.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("8_d2jac")

[node name="Navegation1" type="TextureButton" parent="."]
visible = false
offset_left = 533.0
offset_top = 13.0
offset_right = 1333.0
offset_bottom = 613.0
scale = Vector2(0.05, 0.05)
texture_normal = ExtResource("9_knlk5")
